<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="check_out_awesome_updates_for_android_design_kit_for_figma_now_more_screens_and_more_categories">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="_117_replays">117 REPLAYS</string>
    <string name="tomec_kuwalskij">Tomek Kuwalskij</string>
    <string name="tina_turbina">Tina Turbina</string>
    <string name="roman_kamushken">Roman Kamushken</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="time_tina">18 minutes ago</string>

    <string name="into_component_container_and_with_resizing_constraints_set">“into component container and with resizing constraints set????”</string>
</resources>